--- a/Unidade01/Alzheimer.ipynb
+++ b/Unidade01/Alzheimer.ipynb
@@ -941,7 +941,7 @@
     "# Referência para estudo:\n",
     "\n",
     "*  Grus, Joel. **Data Science do Zero**. Alta Books, 2021\n",
-    "*  Bari, Anasse; Chaouchi, Mohamed; Jung, Tommy. ***Análise Preditiva para Leigos**. Alta Books, 2019\n"
+    "*  Bari, Anasse; Chaouchi, Mohamed; Jung, Tommy. **Análise Preditiva para Leigos**. Alta Books, 2019\n"
    ]
   }
  ],
