--- a/Unidade02/notebooks/create_model.ipynb
+++ b/Unidade02/notebooks/create_model.ipynb
@@ -115,6 +115,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d36bdde9-602e-4787-984c-6ee345e01561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install imbalanced-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2dd836fa-45d2-4f00-8ac0-1bc7b6ba3fe2",
    "metadata": {},
    "outputs": [],
@@ -649,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
