--- a/Unidade02/notebooks/data_analysis.ipynb
+++ b/Unidade02/notebooks/data_analysis.ipynb
@@ -133,51 +133,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c02abc0-025d-4492-ac22-daa23d902eff",
+   "id": "f97deb37-8854-4ff5-a226-ef6c1955d790",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install ydata-profiling"
+    "!pip install pandas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398d9840-0e38-456d-bf0f-c68adef81323",
+   "id": "59c76862-fe02-47e4-80d5-e67fa0915a88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Se estiver no Windows usando o Anaconda Navidator e tiver problemas na instalação tente ir ao terminal do Anaconda Navigator e executar\n",
-    "#!pip uninstall numba visions ydata_profiling joblib \n",
-    "\n",
-    "#conda update conda\n",
-    "#conda update charset-normalizer jsonpatch packaging\n",
-    "#conda install -c conda-forge ydata-profiling"
+    "!pip install scikit-learn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "483585f1-fa12-41e8-b692-b4342490f7a6",
+   "id": "8afecf61-a283-4dc4-abab-e6cdacd10841",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install sweetviz"
+    "!pip install --upgrade numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3414cbbd-ff3d-4be0-873b-a9c5a3e72247",
+   "id": "f4163581-21cd-420a-9e03-712fecabf637",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Se tiver probelmas na instalação tente ir ao terminal do Anaconda Navigator e executar\n",
-    "#!pip uninstall markupsafe jinja2\n",
-    "\n",
-    "#!pip install jinja2==3.0.3\n",
-    "#!pip install markupsafe==2.0.1\n",
-    "#!pip install sweetviz"
+    "!pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61391d8-9a4d-4a2e-acf5-a861362076dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "145f7205-aae5-46c4-9901-d39ef8733b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ee06ec2-fa1f-4f49-a2ab-dfc64ccb7c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install sweetviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebcfa26-fa30-4c92-8f2f-e3a566d1e030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ydata-profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b63387b5-e91c-4740-8ce7-d641381e0cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79a4eebd-f14f-4154-b607-ce785ccd87bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install streamlit_pandas_profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84be5d16-2664-40c3-b96c-d824a6c2a283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade visions"
    ]
   },
   {
@@ -212,7 +272,10 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import plotly.figure_factory as ff\n",
-    "from plotly.subplots import make_subplots"
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "from ydata_profiling import ProfileReport\n",
+    "import sweetviz as sv"
    ]
   },
   {
@@ -1234,6 +1297,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59c0f0d-2008-4f90-af35-b7b08b0abf08",
+   "metadata": {},
+   "source": [
+    "# Relatório no streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c587d2f-a9c8-4d48-a8ce-b801eec587ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1255,7 +1334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
