--- a/Unidade03/notebooks/create_model.ipynb
+++ b/Unidade03/notebooks/create_model.ipynb
@@ -396,7 +396,8 @@
    },
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -522,11 +523,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "06d8dfd4-9dd8-4c20-b1c8-89d7b33c67f1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3028b6b0-8ae8-4a7e-9351-dc6491490578",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -584,7 +588,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -645,7 +650,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -702,7 +708,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -759,7 +766,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -816,7 +824,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -871,7 +880,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -929,7 +939,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -976,7 +987,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -1034,7 +1046,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot((y_test-predictions),bins=50);"
+    "sns.histplot((y_test-predictions),bins=50);\n",
+    "plt.show()"
    ]
   },
   {
@@ -1091,7 +1104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
